--- a/media/css/restdown.css
+++ b/media/css/restdown.css
@@ -124,7 +124,7 @@ pre.shell code::before {
 
 #header {
   background:#C3BDB3;
-  background:#1C313C;
+  background:#46A82E;
   height:66px;
   left:0px;
   position:absolute;
